# monit

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
assets/: Lat15-Terminus32x16.psf
deploy/: adaptive-thermal.sh.reference  deploy.sh  monit.conf.example  monit.service
src/: api.rs  collect.rs  config.rs  fb.rs  font.rs  governor.rs  history.rs  main.rs  ui.rs
