[package]
name = "monit"
version = "0.8.0"
edition = "2021"
description = "Framebuffer system dashboard (local host + remote GPU host over SSH)"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
lto = true
strip = true
panic = "abort"
